--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,15 +5,15 @@ import Layout from '../layouts/Layout.astro';
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
+
 <head>
-	<meta charset="UTF-8" />
+    <meta charset="UTF-8" />
 </head>
+
 <body>
 	<a href="/">ホーム</a>
     <a href="/about/">概要</a>
 	<a href="/blog/">ブログ</a>
-	<h1>aa</h1>
+    <h1>私のAstro学習ブログ</h1>
+    <p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>
 </body>
-<Layout>
-	<Welcome />
-</Layout>
