--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,17 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import '../styles/global.css';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const pageTitle = "ホームページ"
 ---
 <head>
-	<meta charset="UTF-8" />
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		<title>{pageTitle}</title>
 </head>
+
 <body>
 	<a href="/">ホーム</a>
     <a href="/about/">概要</a>
 	<a href="/blog/">ブログ</a>
 	<h1>aa</h1>
 </body>
-<Layout>
-	<Welcome />
-</Layout>
